--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.knteam'
-version = '0.3'
+version = '0.3.1'
 
 repositories {
     mavenCentral()
@@ -26,6 +26,8 @@ dependencies {
     implementation('com.beust:klaxon:5.6')
     implementation("org.xerial:sqlite-jdbc:3.40.1.0")
     implementation("commons-validator:commons-validator:1.7")
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
 }
 
 
